--- a/BackEnd/lisior-crea/package.json
+++ b/BackEnd/lisior-crea/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^5.18.0",
     "@prisma/studio": "^0.502.0",
     "argon2": "^0.40.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "nodemailer": "^6.9.14",
     "passport-jwt": "^4.0.1",
